Fix .so-entries for script manpages

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -83,7 +83,7 @@ install-doc:
 		$(INSTALL_DATA) $$d$$i $(DESTDIR)/$(man1dir) ; \
 	done
 	set -e ; for i in $(MAN_SOURCE_ALIASES) ; do \
-		echo ".so dpkg-source.1" > $(DESTDIR)$(man1dir)/$$i ; \
+		echo ".so man1/dpkg-source.1" > $(DESTDIR)$(man1dir)/$$i ; \
 		chmod 644 $(DESTDIR)$(man1dir)/$$i ; \
 	done
 	$(mkinstalldirs) $(DESTDIR)/$(man8dir)
