--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: dpkg
 Section: base
 Priority: required
-Maintainer: Ian Jackson and others <dpkg-maint@chiark.greenend.org.uk>
+Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Standards-Version: 3.1.0
 
 Package: dpkg
