--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -14,7 +14,7 @@ SBIN_SCRIPTS		= update-rc.d update-alternatives install-info \
 
 MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 dpkg-architecture.1
 MAN8PAGES		= update-rc.d.8 update-alternatives.8 install-info.8  \
-			  dpkg-scanpackages.8 dpkg-scansources.8
+			  cleanup-info.8 dpkg-scanpackages.8 dpkg-scansources.8
 
 CHANGELOG_PARSERS	= cl-debian
 
