Fixup default lispdir

--- a/debian/rules
+++ b/debian/rules
@@ -126,7 +126,7 @@ binary-dpkg-dev: stamp-binary
 	install -d -m 755 -o root -g root $(TMP_DPKG_DEV)/usr/bin
 	mv $(TMP)/usr/lib/dpkg/parsechangelog $(TMP_DPKG_DEV)/usr/lib/dpkg/
 	mv $(TMP)/usr/lib/dpkg/controllib.pl $(TMP_DPKG_DEV)/usr/lib/dpkg/
-	mv $(TMP)/usr/share/emacs $(TMP_DPKG_DEV)/usr/share/dpkg/
+	mv $(TMP)/usr/share/emacs $(TMP_DPKG_DEV)/usr/share/
 	set -e ; for i in dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol \
 		dpkg-shlibdeps dpkg-buildpackage dpkg-distaddfile 822-date \
 		dpkg-scanpackages dpkg-scansources dpkg-architecture \
