Drop emacs byte-compiling support

--- a/configure.in
+++ b/configure.in
@@ -77,7 +77,7 @@ AC_CHECK_PROG(RM,rm,rm -f)
 AC_CHECK_PROG(SED,sed,sed)
 AC_PROG_INSTALL
 dnl Default in case EMACS == no
-lispdir="\$(datadir)/emacs/site-lisp/$PACKAGE"
+lispdir="\$(datadir)/emacs/site-lisp/"
 AM_PATH_LISPDIR
 AC_MODE_T
 AC_PID_T
