Rename cvsclean to distclean Update Swedish translation (bork bork!) Check exitnodo-flag in do_stop

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -34,7 +34,7 @@ man8dir			= $(mandir)/man8
 sysconfdir		= @sysconfdir@
 alternativesdir		= $(sysconfdir)/alternatives
 
-perlpath		= @perlpath@
+PERL			= @PERL@
 mkinstalldirs		= $(SHELL) $(top_srcdir)/mkinstalldirs
 LN			= @LN_S@
 
