--- a/doc/ja/Makefile.in
+++ b/doc/ja/Makefile.in
@@ -17,7 +17,7 @@ all:
 
 clean: 
 
-cvsclean: clean 
+distclean: clean 
 	rm -f Makefile
 
 install: install-doc
@@ -41,5 +41,5 @@ install-doc:
 	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(jaman8dir) ; \
 	done
 
-.PHONY: all clean cvsclean install install-doc install-program
+.PHONY: all clean distclean install install-doc install-program
 
