--- a/methods/Makefile.in
+++ b/methods/Makefile.in
@@ -18,7 +18,7 @@ install:: all install-program install-doc
 .PHONY: clean
 clean::
 
-.PHONY: cvsclean
+.PHONY: distclean
 cvslean:: clean
 	$(RM) Makefile
 
