--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -19,4 +19,4 @@ cvslean:: clean
 dpkg.h: dpkg.h.in
 	sed 's,#ADMINDIR#,$(admindir),; s,#LIBDIR#,$(dpkglibdir),;' $< > $@
 
-.PHONY: all install clean cvsclean
+.PHONY: all install clean distclean
