--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -25,7 +25,7 @@ install:: all
 clean::
 	$(RM) $(GENFILES)
 
-.PHONY: cvsclean
+.PHONY: distclean
 cvslean:: clean
 	$(RM) Makefile confdefs.h config.log
 
