Make it possible to not build dselect

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ GENFILES	= version.h
 include Makefile.conf
 
 SUBDIRS		= include lib dpkg-deb split scripts utils main \
-		  utils doc dselect po methods
+		  utils doc @DSELECTDIR@ po methods
 
 all: version.h all-recursive
 
