Test for ptrdiff_t

--- a/configure.in
+++ b/configure.in
@@ -83,6 +83,7 @@ AC_C_CONST
 AC_C_BIGENDIAN
 AC_CHECK_SIZEOF(unsigned long)
 AC_CHECK_SIZEOF(unsigned int)
+AC_CHECK_TYPE(ptrdiff_t,int)
 AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul vsnprintf lchown)
 AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h)
 AC_CHECK_HEADERS(error.h hurd.h ps.h hurd/ihash.h)
