--- a/configure.in
+++ b/configure.in
@@ -85,7 +85,7 @@ AC_CHECK_SIZEOF(unsigned long)
 AC_CHECK_SIZEOF(unsigned int)
 AC_CHECK_TYPE(ptrdiff_t,int)
 AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul vsnprintf lchown)
-AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h)
+AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h stddef.h)
 AC_CHECK_HEADERS(error.h hurd.h ps.h hurd/ihash.h)
 
 AC_CHECK_LIB(shouldbeinlibc, fmt_past_time)
