autogen.sh: copy gettextm4, lcmessage.m4 and progtest.m4 to automake/ systems without gettext installed Makefile.in: remove the gettext-macros in distclean utils/Makefile.in: fix clean target, link md5sum and start-stop-daemon optlib optlib/*: getopt implementation for systems without GNU getopt.

--- a/configure.in
+++ b/configure.in
@@ -4,6 +4,7 @@ AC_PREREQ([2.12])
 
 AC_INIT(include/dpkg.h.in)
 AC_CONFIG_HEADER(config.h)
+
 DSELECTDIR="dselect"
 AC_ARG_WITH(dselect,
 [  --with-dselect          the dselect package-management frontend],
@@ -135,6 +136,7 @@ include/Makefile
 dpkg-deb/Makefile
 split/Makefile
 lib/Makefile
+optlib/Makefile
 doc/Makefile
 doc/ja/Makefile
 scripts/Makefile
