--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
-
 VPATH		= @srcdir@
 srcdir		= @srcdir@
+top_srcdir	= @top_srcdir@
 
 VERSION		= $(shell cat verion-nr)
 
@@ -8,8 +8,8 @@ GENFILES	= version.h
 
 include Makefile.conf
 
-SUBDIRS		= include lib dpkg-deb split scripts utils main \
-		  utils doc @DSELECTDIR@ po methods
+SUBDIRS		= include lib optlib dpkg-deb split scripts utils main \
+		  utils @DSELECTDIR@ po methods doc
 
 all: version.h all-recursive
 
@@ -20,6 +20,7 @@ clean: clean-recursive
 
 distclean: clean distclean-recursive
 	rm -f Makefile.conf Makefile config.cache config.h config.log config.status
+	rm -f automake/gettext.m4 automake/progtest.m4 automake/lcmessage.m4
 
 version.h: version-nr
 	echo "#define DPKG_VERSION \"$(VERSION)\" /* This line modified by Makefile */" > version.h
