Makefile.conf.in: use @libdir@ and @admindir@ configure.in: add --with-admindir option and change the default to $libdir/db debian/rules: add --with-admindir=/var/lib/dpkg scripts/debian-changelog-mode.el: update location of GPL scripts/dpkg-name.sh: update location of GPL

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -17,14 +17,14 @@ localedir		= $(datadir)/locale
 bindir			= @bindir@
 sbindir			= @sbindir@
 
-libdir			= $(prefix)/lib
+libdir			= @libdir@
 dpkglibdir		= $(libdir)/$(PACKAGE)
 
 methodsdir		= $(dpkglibdir)/methods
 parsechangelogdir	= $(dpkglibdir)/parsechangelog
 elispdir		= @lispdir@
 
-admindir		= /var/lib/$(PACKAGE)
+admindir		= @admindir@
 
 mandir			= @mandir@
 man1dir			= $(mandir)/man1
