--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,8 @@ $(BUILD)/config.status:
 		--infodir=/usr/share/info \
 		--sysconfdir=/etc \
 		--sharedstatedir=/var/lib \
-		--localstatedir=/var/lib
+		--localstatedir=/var/lib \
+		--with-admindir=/var/lib/dpkg
 
 clean:
 	$(checkdir)
