--- a/debian/rules
+++ b/debian/rules
@@ -86,7 +86,7 @@ binary-dpkg: stamp-binary
 		done ; \
 		install -d -m 755 -o root -g root $(TMP_DPKG)/usr/share/man/$$i/man8 ; \
 		for m in dpkg.8 dselect.8 dpkg-split.8 start-stop-daemon.8 \
-		    	cleanup-info dpkg-divert.8 \
+		    	cleanup-info.8 dpkg-divert.8 \
 			install-info.8 update-alternatives.8 update-rc.d.8 ; do \
 			if [ -f $(TMP)/usr/share/man/$$i/man8/$$m ] ; then \
 				mv $(TMP)/usr/share/man/$$i/man8/$$m $(TMP_DPKG)/usr/share/man/$$i/man8/$$m ; \
