debian/dpkg-doc.postrm: Use doc-name instead of file-name dselect/pkgdisplay.cc: Replace empty string for eflags to a space so gettext doesn't use the translation-info po/update.sh: Generate dselect/helpmsgs.{cc,h} so we can translate them. po/POTFILES.in: add dselect/helpmsgs.cc dselect/pkgtop.cc: use ACS_HLINE instead of `-' dselect/baselist.cc: change colour of column headings dselect: add a new --export mode which suppresses the display of the helpscreen

--- a/dselect/Makefile.in
+++ b/dselect/Makefile.in
@@ -12,7 +12,8 @@ CXX_SOURCES	= basecmds.cc baselist.cc basetop.cc bindings.cc curkeys.cc \
 MAN8PAGES	= dselect.8
 
 OBJECTS		= $(patsubst %.cc, %.o, $(CXX_SOURCES))
-GENFILES	= $(OBJECTS) dselect helpmsgs.h
+GENFILES	= $(OBJECTS) dselect helpmsgs.h curkeys.h \
+		  $(srcdir)/helpmsgs.h $(srcdir)/helpmsgs.cc
 
 .PHONY: all
 all:: dselect
@@ -50,8 +51,8 @@ dselect: $(OBJECTS) ../lib/libdpkg.a
 basecmds.o: helpmsgs.h
 curkeys.o: curkeys.h
 
-helpmsgs.h helpmsgs.cc: helpmsgs.src $(srcdir)/mkhelpmsgs.pl
-	perl $(srcdir)/mkhelpmsgs.pl $<
+$(srcdir)/helpmsgs.h $(srcdir)/helpmsgs.cc: helpmsgs.src $(srcdir)/mkhelpmsgs.pl
+	cd $(srcdir) ; perl $(srcdir)/mkhelpmsgs.pl $<
 
 curkeys.h: keyoverride $(srcdir)/mkcurkeys.pl
 	cursesfile=`echo '#include <curses.h>' | \
