From the ChangeLog   * debian/control: add Build-Depends   * THANKS: new file which lists everyone who contributed to the code   * Change `Debian Linux' to `Debian GNU/Linux' in a couple of manpages   * main/enquiry.c: modify list1package to use the full width of the tty   * Merge patches from Adam Heath:     + lib/mlib.c: new function do_fd_copy to read a file into a fd     + dpkg-deb/build.c: use do_fd_copy     + dpkg-deb/build.c: use dpkg-deb-filelist to reorder files when       building a package     + dpkg-deb/info.c: use do_fd_copy     + lib/showcright.c: use do_fd_copy to read license     + scripts/dpkg-safelist.{1,pl}: new script to reorder a filelist to       make sure symlinks are listed after their targets.     + dpkg-deb/main.c: add -z option to set compression level     + dpkg-deb/build.c: pass new -z options to gzip   * dpkg-deb/dpkg-deb.1: document new -z option

--- a/debian/rules
+++ b/debian/rules
@@ -74,7 +74,7 @@ binary-dpkg: stamp-binary
 	set -e ; for i in dpkg dpkg-deb dpkg-split md5sum dselect ; do \
 		mv $(TMP)/usr/bin/$$i $(TMP_DPKG)/usr/bin/ ; \
 	done
-	set -e ; for i in ChangeLog TODO copyright ; do \
+	set -e ; for i in ChangeLog THANKS TODO copyright ; do \
 		mv $(TMP)/usr/share/doc/dpkg/$$i $(TMP_DPKG)/usr/share/doc/dpkg/ ; \
 	done
 	set -e ; for i in "" ja ; do \
