--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -7,12 +7,14 @@ include ../Makefile.conf
 BIN_SCRIPTS		= dpkg-name dpkg-source dpkg-genchanges \
 			  dpkg-gencontrol dpkg-shlibdeps dpkg-buildpackage \
 			  dpkg-parsechangelog dpkg-distaddfile 822-date \
-			  dpkg-scanpackages dpkg-scansources dpkg-architecture
+			  dpkg-scanpackages dpkg-scansources dpkg-architecture \
+			  dpkg-safefilelist
 
 SBIN_SCRIPTS		= update-rc.d update-alternatives install-info \
 			  dpkg-divert cleanup-info
 
-MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 dpkg-architecture.1
+MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 dpkg-architecture.1 \
+			  dpkg-safefilelist.1
 MAN8PAGES		= update-rc.d.8 update-alternatives.8 install-info.8  \
 			  cleanup-info.8 dpkg-scanpackages.8 dpkg-scansources.8 \
 			  dpkg-divert.8
