--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,8 @@ Section: base
 Priority: required
 Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Standards-Version: 3.1.0
+Build-Depends: debiandoc-sgml, ncurses-dev
+
 
 Package: dpkg
 Architecture: any
