* version-nr: update to 1.6.5 * doc/Makefile.in: install THANKS * TODO: remove items that have been done * lib/showcright.c: exit(0) after showing the copyright since we don't exec cat anymore * main/configure.c: add NULL to execlp() parameters; this fixes the random segfaults when showing the conffile-diff

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -39,7 +39,7 @@ install-doc: install-doc-recursive
 		$(INSTALL_DATA) $$i $(DESTDIR)$(docdir)/internals/$$bn ; \
 	done
 	$(INSTALL_DATA) $(srcdir)/ChangeLog $(DESTDIR)$(docdir)/ChangeLog.manuals
-	set -e ; for i in ChangeLog TODO ; do \
+	set -e ; for i in ChangeLog THANKS TODO ; do \
 		$(INSTALL_DATA) $(top_srcdir)/$$i $(DESTDIR)$(docdir) ; \
 	done
 	$(INSTALL_DATA) $(top_srcdir)/COPYING $(DESTDIR)$(copyingfile)
