scripts/cl-debian.pl: Allow space between `#' and the bugnumber in the changelog scripts scripts/start-stop-daemon.c: test for __sparc__ instead scripts/Makefile.in: add optlib to CFLAGS utils/start-stop-daemon.c: add option to chroot first, patch from Marco d'Itri utils/start-stop-daemon.8: document chroot option dselect/pkgtop.cc: use waddnstr to print package description instead of waddch

--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -5,6 +5,8 @@ top_srcdir	= @top_srcdir@
 
 include ../Makefile.conf
 
+CFLAGS			+= $(top_srcdir)/optlib
+
 SSD_SOURCES		= start-stop-daemon.c
 SSD_OBJECTS		= $(patsubst %.c, %.o, $(SSD_SOURCES))
 SSD_MANPAGES		= start-stop-daemon.8
