dselect/baselist.cc: don't specify SA_INTERRUPT, since it's not portable and the default behaviour main/enquiry.c: include sys/termios.h (needed on Solaris) lib/lock.c: use EACCESS instead of EWOULDBLOCK dselect/main.cc: fix help for -D dselect/main.cc: try to lock admindir instead of using readwrite dselect/method.cc: switch to using fcntl for lock since that is more portable, and revamp lockingcode to reduce code duplication

--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -5,7 +5,7 @@ top_srcdir	= @top_srcdir@
 
 include ../Makefile.conf
 
-CFLAGS			+= $(top_srcdir)/optlib
+CFLAGS			+= -I$(top_srcdir)/optlib
 
 SSD_SOURCES		= start-stop-daemon.c
 SSD_OBJECTS		= $(patsubst %.c, %.o, $(SSD_SOURCES))
