--- a/configure.in
+++ b/configure.in
@@ -98,9 +98,11 @@ AC_C_BIGENDIAN
 AC_CHECK_SIZEOF(unsigned long)
 AC_CHECK_SIZEOF(unsigned int)
 AC_CHECK_TYPE(ptrdiff_t,int)
-AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul vsnprintf lchown)
+AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul)
+AC_CHECK_FUNCS(vsnprintf lchown snprintf)
 AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h stddef.h)
 AC_CHECK_HEADERS(error.h hurd.h ps.h hurd/ihash.h)
+AC_SYS_SIGLIST_DECLARED
 
 AC_CHECK_LIB(shouldbeinlibc, fmt_past_time)
 AC_CHECK_LIB(ps, proc_stat_list_pid_proc_stat)
@@ -120,7 +122,7 @@ fi
 
 AC_TRY_COMPILE([
 #include <sys/types.h>
-#include <sys/dir.h>
+#include <dirent.h>
 ], alphasort, AC_DEFINE(HAVE_ALPHASORT_DECLARATION))
 
 AC_TRY_COMPILE(,[
