--- a/dselect/Makefile.in
+++ b/dselect/Makefile.in
@@ -59,5 +59,5 @@ curkeys.h: keyoverride $(srcdir)/mkcurkeys.pl
 	cursesfile=`echo '#include <curses.h>' | \
 		 $(CC) -E - | grep 'curses.h' | head -1 | \
 		 $(SED) -e 's/^[^"]*"//; s/".*$$//'`; \
-	if [ "$$cursesfile" == "" ]; then echo "can't find curses file"; exit 1; fi; \
+	if [ "$$cursesfile" = "" ]; then echo "can't find curses file"; exit 1; fi; \
 	perl $(srcdir)/mkcurkeys.pl $< $$cursesfile > $@
