--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -2,7 +2,13 @@ Makefile.in
 Makefile.in.in
 cat-id-tbl.c
 dpkg.pot
-en.fmo
-fr.gmo
 stamp-cat-id
 POTFILES
+sv.gmo
+ru.gmo
+pl.gmo
+ja.gmo
+es.gmo
+en.gmo
+cs.gmo
+fr.gmo
