configure.in: don't try to outguess what CFLAGS should be scripts/update-alternatives.8: fix typo `Merge Marcus Brinkman patches day': + scripts/dpkg-architecture.pl: architecture -q should not imply -f + scripts/dpkg-shlibdeps.pl: build a list of packages instead of overwriting previous results. + utils/start-stop-daemon.c: update HURD specifics + configure.in: revamp HURD detection stuff + debian/rules: use dpkg-buildarchitecture to get proper info, set config_arg if we are crosscompiling + debian/rules: typo in clean target, scan start-stop-daemon for shlibdeps

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -54,6 +54,8 @@ LD			= @LD@
 LDFLAGS			= @LDFLAGS@
 LIBS			= @LIBS@
 
+SSD_LIBS		= @SSD_LIBS@
+
 DEFS			= @DEFS@
 INCLUDE_CFLAGS		= -I$(top_srcdir)/include -I$(top_srcdir) -I$(srcdir) -I../include -I.. -I.
 
