--- a/configure.in
+++ b/configure.in
@@ -101,24 +101,16 @@ AC_CHECK_TYPE(ptrdiff_t,int)
 AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul)
 AC_CHECK_FUNCS(vsnprintf lchown snprintf)
 AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h stddef.h)
-AC_CHECK_HEADERS(error.h hurd.h ps.h hurd/ihash.h)
+AC_CHECK_HEADERS(error.h)
 AC_SYS_SIGLIST_DECLARED
 
-AC_CHECK_LIB(shouldbeinlibc, fmt_past_time)
-AC_CHECK_LIB(ps, proc_stat_list_pid_proc_stat)
+AC_CHECK_LIB(ihash, ihash_create, SSD_LIBS="-lihash $SSD_LIBS")
+AC_CHECK_LIB(ps, proc_stat_list_create, SSD_LIBS="-lps $SSD_LIBS")
+AC_CHECK_LIB(shouldbeinlibc, fmt_past_time, SSD_LIBS="-lshouldbeinlibc $SSD_LIBS")
+AC_SUBST(SSD_LIBS)
 
 AC_HAVE_SYSINFO
 AC_MEMINFO_IN_SYSINFO
-
-AC_SUBST(OPTCFLAGS)
-if test "${GCC-no}" = yes; then
- CFLAGS="-D_REENTRANT -D_GNU_SOURCE -O2"
- CXXFLAGS="-D_REENTRANT -D_GNU_SOURCE -O2"
- OPTCFLAGS="-O3"
-else
- CFLAGS="-D_REENTRANT -D_GNU_SOURCE -O"
- CXXFLAGS="-D_REENTRANT -D_GNU_SOURCE -O"
-fi
 
 AC_TRY_COMPILE([
 #include <sys/types.h>
