--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -50,6 +50,7 @@ install-doc:
 	$(INSTALL_DATA) $(srcdir)/$(MD5_MANPAGES) $(DESTDIR)/$(man1dir)
 
 start-stop-daemon: $(SSD_OBJECTS) ../optlib/libopt.a
+	$(CC) $(LDFLAGS) -o $@ $(SSD_OBJECTS) $(SSD_LIBS)
 
 md5sum: $(MD5_OBJECTS) ../optlib/libopt.a
 
