scripts/dpkg-buildpackage.sh: we know that dpkg-architecture is installed since we provide it, so don't test for its existance More updates from Marcus Brinkman: + archtable: Change first column format from CPU to CPU-OS.   Add entry for i386-gnu. Update comment. + configure.in: Check Debian architecture revamped:   More appropriate check title. Check for CPU-OS in arhctable (instead   just CPU). Enclose result message in [...] (because of the comma   character). After the test, $dpkg_archset can't be empty, so remove   following test which is always true. + Remove internal use of --print-architecture:   scripts/controllib.pl: Use always dpkg-architecture -qDEB_HOST_ARCH   scripts/dpkg-buildpackage: Don't set $arch at command line parsing time,     instead, always set it later with dpkg-architecture -qDEB_HOST_ARCH   dpkg-name.pl: Fall back to dpkg --print-installation-architecture.

--- a/configure.in
+++ b/configure.in
@@ -58,20 +58,16 @@ AC_MSG_RESULT($VERSION)
 AC_PREFIX_DEFAULT(/usr)
 
 dpkg_archset=''
-AC_MSG_CHECKING(system architecture)
-dpkg_archset="`awk '$1 == "'$target_cpu'" { print $2 }' $srcdir/archtable`"
+AC_MSG_CHECKING(Debian architecture)
+dpkg_archset="`awk '$1 == "'$target_cpu-$target_os'" { print $2 }' $srcdir/archtable`"
 # Finish off
 if test "x$dpkg_archset" = "x"; then
- AC_MSG_RESULT($target_cpu, but not found in archtable)
- dpkg_archset=$target_cpu
-else
+ AC_MSG_RESULT([$target_cpu-$target_os, but not found in archtable])
+ dpkg_archset=$target_cpu-$target_os
+ else
  AC_MSG_RESULT($dpkg_archset)
 fi
-
-if test "x$dpkg_archset" != x
-then
- AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}")
-fi
+AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}")
 
 dnl gettext
 
