configure.in: add -D_GNU_SOURCE to CFLAGS so we can get strsignal scripts/dpkg-genchanges.pl: output Changed-By just after Maintainer scripts/cl-debian.pl: really allow a single whitespace to between # and a bugnumber that will be closed.

--- a/debian/rules
+++ b/debian/rules
@@ -73,7 +73,7 @@ binary-dpkg: stamp-binary
 	install -d -m 755 -o root -g root $(TMP_DPKG)/usr/lib/dpkg
 	install -d -m 755 -o root -g root $(TMP_DPKG)/usr/bin
 	install -d -m 755 -o root -g root $(TMP_DPKG)/sbin
-	mv $(TMP)/etc $(TMP_DPKG)/
+	-test -d $(TMP)/etc && mv $(TMP)/etc $(TMP_DPKG)/
 	mv $(TMP)/var $(TMP_DPKG)/
 	mv $(TMP)/usr/sbin/start-stop-daemon $(TMP_DPKG)/sbin/
 	mv $(TMP)/usr/sbin $(TMP_DPKG)/usr/
