dpkg-deb/build.c: remove extra closing brace include/dpkg.h.in: add define for statusoveride file main/filedb.[ch]: add code to manage the statoverride list main/archives.c: modify tarobject() to check for statoverrides TODO: remove integrating suidmanager note, it's partially done now

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -66,22 +66,23 @@
 #define POSTRMFILE         "postrm"
 #define LISTFILE           "list"
 
-#define ADMINDIR        "#ADMINDIR#"
-#define STATUSFILE      "status"
-#define AVAILFILE       "available"
-#define LOCKFILE        "lock"
-#define CMETHOPTFILE    "cmethopt"
-#define METHLOCKFILE    "methlock"
-#define DIVERSIONSFILE  "diversions"
-#define UPDATESDIR      "updates/"
-#define INFODIR         "info/"
-#define PARTSDIR        "parts/"
-#define CONTROLDIRTMP   "tmp.ci/"
-#define IMPORTANTTMP    "tmp.i"
-#define REASSEMBLETMP   "reassemble" DEBEXT
-#define IMPORTANTMAXLEN  10
-#define IMPORTANTFMT    "%04d" /* change => also change lib/database.c:cleanup_updates */
-#define MAXUPDATES       50
+#define ADMINDIR          "#ADMINDIR#"
+#define STATUSFILE        "status"
+#define AVAILFILE         "available"
+#define LOCKFILE          "lock"
+#define CMETHOPTFILE      "cmethopt"
+#define METHLOCKFILE      "methlock"
+#define DIVERSIONSFILE    "diversions"
+#define STATOVERRIDEFILE  "statoverride"
+#define UPDATESDIR        "updates/"
+#define INFODIR           "info/"
+#define PARTSDIR          "parts/"
+#define CONTROLDIRTMP     "tmp.ci/"
+#define IMPORTANTTMP      "tmp.i"
+#define REASSEMBLETMP     "reassemble" DEBEXT
+#define IMPORTANTMAXLEN    10
+#define IMPORTANTFMT      "%04d" /* change => also change lib/database.c:cleanup_updates */
+#define MAXUPDATES         50
 
 #define LIBDIR              "#LIBDIR#"
 #define LOCALLIBDIR         "/usr/local/lib/dpkg"
