configure.in: generate doc/sv/Makefile as well main/filesdb.c: fix logic when reading statusoverride-file scripts/.cvsignore: add all the perl scripts scripts/dpkg-divert.pl: + turn $admindir into $dpkglibdir, which the Makefile will handle + fix glob->regexp logic for --list scripts/Makefile.in: + replace one `sed' with `$(SED)' + add dpkg-statoverride scripts/dpkg-statoverride.pl: new util to manage statoverrides debian/rules: move Swedish manpages into the package as well

--- a/scripts/.cvsignore
+++ b/scripts/.cvsignore
@@ -1,2 +1,20 @@
 Makefile.in
 elisp-comp
+822-date
+cl-debian
+cleanup-info
+controllib
+dpkg-architecture
+dpkg-distaddfile
+dpkg-divert
+dpkg-genchanges
+dpkg-gencontrol
+dpkg-parsechangelog
+dpkg-scanpackages
+dpkg-scansources
+dpkg-shlibdeps
+dpkg-source
+dpkg-statoverride
+install-info
+update-alternatives
+update-rc.d
