--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -12,10 +12,11 @@ BIN_SCRIPTS		= dpkg-name dpkg-source dpkg-genchanges \
 SBIN_SCRIPTS		= update-rc.d update-alternatives install-info \
 			  dpkg-divert dpkg-statoverride cleanup-info
 
-MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 dpkg-architecture.1
+MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 \
+			  dpkg-architecture.1
 MAN8PAGES		= update-rc.d.8 update-alternatives.8 install-info.8  \
 			  cleanup-info.8 dpkg-scanpackages.8 dpkg-scansources.8 \
-			  dpkg-divert.8
+			  dpkg-divert.8 dpkg-statoverride.8
 
 CHANGELOG_PARSERS	= cl-debian
 
