configure.in: add de to ALL_LINGUAS po/de.po: New German translation from Hartmut Koptein THANKS: Add Hartmut main/enquiry.c: fix silly type error

--- a/configure.in
+++ b/configure.in
@@ -72,7 +72,7 @@ AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}")
 
 dnl gettext
 
-ALL_LINGUAS="cs en es fr it ja pl ru sv"
+ALL_LINGUAS="cs de en es fr it ja pl ru sv"
 AM_GNU_GETTEXT
 
 dnl Other stuff
