remove po stuff on clean

--- a/debian/rules
+++ b/debian/rules
@@ -40,6 +40,7 @@ clean:
 	rm -f debian/files debian/substvars
 	rm -f debian/dpkg.substvars
 	rm -fr $(BUILD) $(TMP) $(TMP_DPKG) $(TMP_DPKG_DEV) $(TMP_DPKG_DOC)
+	rm -f po/{cat-id-tbl.c,stamp-cat-id,*.gmo}
 	rm -f stamp-build stamp-binary
 
 build: stamp-build
