debian/control: add dependency on binutils for dpkg-dev (needed for objdump) scripts/update-alternatives.pl: + set alternative to manual mode when doing --config + Fix typo in test for removed manual alternative + Merge patch from Camm Maguire to fix updating of slave links

--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Package: dpkg-dev
 Section: devel
 Priority: important
 Architecture: all
-Depends: perl5, cpio (>= 2.4.2-2), patch (>= 2.2-1), make
+Depends: perl5, cpio (>= 2.4.2-2), patch (>= 2.2-1), make, binutils
 Recommends: c-compiler
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
