--- a/doc/sv/Makefile.in
+++ b/doc/sv/Makefile.in
@@ -4,17 +4,13 @@ top_srcdir	= @top_srcdir@
 
 include ../../Makefile.conf
 
-#svman1dir	= $(subst $(mandir),$(mandir)/sv,$(man1dir))
+svman1dir	= $(subst $(mandir),$(mandir)/sv,$(man1dir))
 svman5dir	= $(subst $(mandir),$(mandir)/sv,$(man5dir))
 svman8dir	= $(subst $(mandir),$(mandir)/sv,$(man8dir))
 
-#MAN1PAGES	= dpkg-deb.1 md5sum.1
-#MAN8PAGES	= dpkg.8 dselect.8 install-info.8 start-stop-daemon.8 \
-#		  update-alternatives.8 update-rc.d.8
-
-MAN1PAGES	= md5sum.1
+MAN1PAGES	= md5sum.1 822-date.1
 MAN5PAGES	= deb.5 deb-control.5 deb-old.5
-MAN8PAGES	= dpkg.8 dselect.8 start-stop-daemon.8
+MAN8PAGES	= dpkg.8 dselect.8 start-stop-daemon.8 dpkg-split.8
 
 all: 
 
