main/main.c: call new myoptfile() include/Makefile.in, include/dpkg.h.in: add dpkgconfdir

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -32,6 +32,7 @@ man5dir			= $(mandir)/man5
 man8dir			= $(mandir)/man8
 
 sysconfdir		= @sysconfdir@
+dpkgconfdir		= $(sysconfdir)/dpkg
 alternativesdir		= $(sysconfdir)/alternatives
 
 PERL			= @PERL@
