--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -17,6 +17,8 @@ cvslean:: clean
 	rm -f Makefile
 
 dpkg.h: dpkg.h.in
-	sed 's,#ADMINDIR#,$(admindir),; s,#LIBDIR#,$(dpkglibdir),;' $< > $@
+	sed -e 's,#CONFIGDIR#,$(dpkgconfdir),' \
+		-e 's,#ADMINDIR#,$(admindir),' \
+		-e 's,#LIBDIR#,$(dpkglibdir),; $< > $@
 
 .PHONY: all install clean distclean
