and now it compiles again

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -19,6 +19,6 @@ cvslean:: clean
 dpkg.h: dpkg.h.in
 	sed -e 's,#CONFIGDIR#,$(dpkgconfdir),' \
 		-e 's,#ADMINDIR#,$(admindir),' \
-		-e 's,#LIBDIR#,$(dpkglibdir),; $< > $@
+		-e 's,#LIBDIR#,$(dpkglibdir),' $< > $@
 
 .PHONY: all install clean distclean
