Add dutch translation

--- a/configure.in
+++ b/configure.in
@@ -72,7 +72,7 @@ AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}")
 
 dnl gettext
 
-ALL_LINGUAS="cs de en es fr gl it ja pl pt_BR ru sv"
+ALL_LINGUAS="cs de en es fr gl it nl ja pl pt_BR ru sv"
 AM_GNU_GETTEXT
 
 dnl Other stuff
