Add missing dpkg.conffiles Rename dpkg configfile to dpkg.cfg

--- a/debian/rules
+++ b/debian/rules
@@ -108,7 +108,7 @@ binary-dpkg: stamp-binary
 
 	install -d -m 755 -o root -g root $(TMP_DPKG)/etc/dpkg
 	install -p -m 644 -o root -g root debian/dpkg.cfg \
-		$(TMP_DPKG)/etc/dpkg/dpkg
+		$(TMP_DPKG)/etc/dpkg/
 
 # Now that dpkg has been installed, Debianize it
 # Policy stuff
