debian/rules, debian/origin: add new origin file scripts/dpkg-gencontrol.pl: rename Bugs-Submit-To to Bugs debian/control: add Bugs and Origin entries lib/database.c, parse.c: add Origin and Bugs to fieldinfos table include/dpkg-db.h: add Origin and Bugs to pkginfoperfile struct dpkg-deb/main.c, dpkg-deb/dpkg-deb.h: fix type for compression Makefile.in: install origin file

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,8 @@ Source: dpkg
 Section: base
 Priority: required
 Maintainer: Wichert Akkerman <wakkerma@debian.org>
+Origin: debian
+Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
 Build-Depends: debiandoc-sgml, libncurses-dev
 
