--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,8 @@ SUBDIRS		= include lib optlib intl dpkg-deb split scripts utils main \
 all: version.h all-recursive
 
 install: all install-recursive
+	$(mkinstalldirs) $(dpkgconfdir)/origins
+	$(INSTALL_DATA) $(srcdir)/origin $(dpkgconfdir)/origins/debian
 
 clean: clean-recursive
 	rm -f $(GENFILES)
