lib/mlib.c: fix error reporting for reading data in do_fd_copy optlib/Makefile.am: remove (can't believe this still existed!) utils/Makefile.in: link md5sum with our own libintl if needed archtable, scripts/dpkg-architecture.pl: add freebsd-i386 acconfig.h, configure.in, doc/Makefile.in: make building documentation and start-stop-daemon optional main/help.c: only check for start-stop-daemon in checkpatch() if we build it

--- a/configure.in
+++ b/configure.in
@@ -16,6 +16,30 @@ AC_ARG_WITH(dselect,
  esac])
 AC_SUBST(DSELECTDIR)
 
+USE_START_STOP_DAEMON="true"
+AC_ARG_WITH(start-stop-daemon,
+[  --with-start-stop-daemon
+                          start and stop system daemons],
+[case "$withval" in
+  "false" | "no" )
+    USE_START_STOP_DAEMON=""
+    ;;
+ esac])
+AC_SUBST(USE_START_STOP_DAEMON)
+if test "$USE_START_STOP_DAEMON" != ""; then
+    AC_DEFINE(USE_START_STOP_DAEMON)
+fi
+
+USE_SGML_DOC="true"
+AC_ARG_WITH(sgml-doc,
+[  --with-sgml-doc         SGML documentation converted to HTML],
+[case "$withval" in
+  "false" | "no" )
+    USE_SGML_DOC=""
+    ;;
+ esac])
+AC_SUBST(USE_SGML_DOC)
+
 admindir="$libdir/db"
 AC_ARG_WITH(admindir,
 [  --with-admindir=DIR     store dpkg database in DIR [LIBDIR/db]],
