--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -199,7 +199,7 @@ void m_pipe(int fds[2]);
 void checksubprocerr(int status, const char *description, int sigpipeok);
 void waitsubproc(pid_t pid, const char *description, int sigpipeok);
 
-int do_fd_copy(int fd1, int fd2, char *desc);
+int do_fd_copy(int fd1, int fd2, int limit, char *desc);
 
 extern volatile int onerr_abort;
 
